--- a/src/proyecto/pkg2023_ed/Ordenes.form
+++ b/src/proyecto/pkg2023_ed/Ordenes.form
@@ -96,22 +96,15 @@
               <Group type="102" attributes="0">
                   <EmptySpace min="-2" pref="33" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Group type="102" alignment="0" attributes="0">
-                          <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="txtAuto" min="-2" max="-2" attributes="0"/>
-                              <Component id="jLabel3" min="-2" pref="262" max="-2" attributes="0"/>
-                          </Group>
-                          <EmptySpace pref="195" max="32767" attributes="0"/>
-                      </Group>
-                      <Group type="102" alignment="0" attributes="0">
-                          <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                              <Component id="txtMaterial3" alignment="0" pref="188" max="32767" attributes="0"/>
-                              <Component id="txtMaterial2" alignment="0" max="32767" attributes="0"/>
-                              <Component id="txtMaterial1" alignment="0" max="32767" attributes="0"/>
-                          </Group>
-                          <EmptySpace max="32767" attributes="0"/>
+                      <Component id="txtAuto" min="-2" max="-2" attributes="0"/>
+                      <Component id="jLabel3" min="-2" pref="262" max="-2" attributes="0"/>
+                      <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
+                          <Component id="txtMaterial3" alignment="0" pref="188" max="32767" attributes="0"/>
+                          <Component id="txtMaterial2" alignment="0" max="32767" attributes="0"/>
+                          <Component id="txtMaterial1" alignment="0" max="32767" attributes="0"/>
                       </Group>
                   </Group>
+                  <EmptySpace max="32767" attributes="0"/>
               </Group>
               <Group type="102" alignment="1" attributes="0">
                   <EmptySpace max="32767" attributes="0"/>
