Finalizacion de interfaz-suma de saldo

--- a/src/proyecto/pkg2023_ed/Juego_TerminadoPerdido.form
+++ b/src/proyecto/pkg2023_ed/Juego_TerminadoPerdido.form
@@ -19,14 +19,14 @@
     <AuxValue name="FormSettings_listenerGenerationStyle" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_variablesLocal" type="java.lang.Boolean" value="false"/>
     <AuxValue name="FormSettings_variablesModifier" type="java.lang.Integer" value="2"/>
-    <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,1,86,0,0,2,57"/>
+    <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,1,84,0,0,2,58"/>
   </AuxValues>
 
   <Layout class="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout">
     <Property name="useNullLayout" type="boolean" value="false"/>
   </Layout>
   <SubComponents>
-    <Container class="javax.swing.JPanel" name="jPanel1">
+    <Container class="javax.swing.JPanel" name="Tablaperdida">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="20" green="1f" red="23" type="rgb"/>
@@ -34,35 +34,35 @@
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="40" y="100" width="260" height="220"/>
+          <AbsoluteConstraints x="40" y="100" width="-1" height="-1"/>
         </Constraint>
       </Constraints>
 
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Group type="102" attributes="0">
+              <Group type="102" alignment="0" attributes="0">
                   <EmptySpace min="19" pref="19" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="0" attributes="0">
-                          <Component id="TituloResultado" min="-2" pref="82" max="-2" attributes="0"/>
+                          <Component id="TituloResultadoPerdida" min="-2" pref="82" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
-                          <Component id="Resultado" min="-2" pref="73" max="-2" attributes="0"/>
+                          <Component id="ResultadoPerdida" min="-2" pref="73" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
-                          <Component id="TituloSaldo" min="-2" pref="91" max="-2" attributes="0"/>
+                          <Component id="TituloSaldoPerdida" min="-2" pref="91" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
-                          <Component id="PresupuestoFinal" min="-2" pref="73" max="-2" attributes="0"/>
+                          <Component id="PresupuestoFinalPerdida" min="-2" pref="73" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
-                          <Component id="TituloOrdenes" min="-2" pref="125" max="-2" attributes="0"/>
+                          <Component id="TituloOrdenesPerdida" min="-2" pref="125" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
-                          <Component id="txtCantOrdenes" min="-2" pref="73" max="-2" attributes="0"/>
+                          <Component id="txtCantOrdenesPerdida" min="-2" pref="73" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
-                          <Component id="TituloOrdenesRealizadas" min="-2" pref="146" max="-2" attributes="0"/>
+                          <Component id="TituloOrdenesRealizadasPerdida" min="-2" pref="146" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
-                          <Component id="txtOrdenesRealizadas" min="-2" pref="73" max="-2" attributes="0"/>
+                          <Component id="txtOrdenesRealizadasPerdida" min="-2" pref="73" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace pref="16" max="32767" attributes="0"/>
@@ -74,31 +74,31 @@
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="1" attributes="0">
-                      <Component id="TituloResultado" min="-2" max="-2" attributes="0"/>
-                      <Component id="Resultado" min="-2" pref="40" max="-2" attributes="0"/>
+                      <Component id="TituloResultadoPerdida" min="-2" max="-2" attributes="0"/>
+                      <Component id="ResultadoPerdida" min="-2" pref="40" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="19" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="1" attributes="0">
-                      <Component id="TituloSaldo" min="-2" max="-2" attributes="0"/>
-                      <Component id="PresupuestoFinal" min="-2" pref="37" max="-2" attributes="0"/>
+                      <Component id="TituloSaldoPerdida" min="-2" max="-2" attributes="0"/>
+                      <Component id="PresupuestoFinalPerdida" min="-2" pref="37" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="14" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="1" attributes="0">
-                      <Component id="TituloOrdenes" min="-2" max="-2" attributes="0"/>
-                      <Component id="txtCantOrdenes" min="-2" pref="35" max="-2" attributes="0"/>
+                      <Component id="TituloOrdenesPerdida" min="-2" max="-2" attributes="0"/>
+                      <Component id="txtCantOrdenesPerdida" min="-2" pref="35" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="1" attributes="0">
-                      <Component id="TituloOrdenesRealizadas" min="-2" max="-2" attributes="0"/>
-                      <Component id="txtOrdenesRealizadas" min="-2" pref="40" max="-2" attributes="0"/>
+                      <Component id="TituloOrdenesRealizadasPerdida" min="-2" max="-2" attributes="0"/>
+                      <Component id="txtOrdenesRealizadasPerdida" min="-2" pref="40" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="23" max="32767" attributes="0"/>
+                  <EmptySpace pref="29" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
       </Layout>
       <SubComponents>
-        <Component class="javax.swing.JLabel" name="TituloResultado">
+        <Component class="javax.swing.JLabel" name="TituloResultadoPerdida">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Segoe UI" size="14" style="1"/>
@@ -110,17 +110,17 @@
             <Property name="toolTipText" type="java.lang.String" value=""/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JLabel" name="Resultado">
+        <Component class="javax.swing.JLabel" name="ResultadoPerdida">
           <Properties>
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="33" green="ff" red="33" type="rgb"/>
+              <Color blue="0" green="0" red="cc" type="rgb"/>
             </Property>
           </Properties>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
           </AuxValues>
         </Component>
-        <Component class="javax.swing.JLabel" name="TituloSaldo">
+        <Component class="javax.swing.JLabel" name="TituloSaldoPerdida">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Segoe UI" size="14" style="1"/>
@@ -132,17 +132,17 @@
             <Property name="toolTipText" type="java.lang.String" value=""/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JLabel" name="PresupuestoFinal">
+        <Component class="javax.swing.JLabel" name="PresupuestoFinalPerdida">
           <Properties>
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="33" green="ff" red="33" type="rgb"/>
+              <Color blue="0" green="0" red="cc" type="rgb"/>
             </Property>
           </Properties>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
           </AuxValues>
         </Component>
-        <Component class="javax.swing.JLabel" name="TituloOrdenes">
+        <Component class="javax.swing.JLabel" name="TituloOrdenesPerdida">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Segoe UI" size="14" style="1"/>
@@ -154,17 +154,17 @@
             <Property name="toolTipText" type="java.lang.String" value=""/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JLabel" name="txtCantOrdenes">
+        <Component class="javax.swing.JLabel" name="txtCantOrdenesPerdida">
           <Properties>
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="33" green="ff" red="33" type="rgb"/>
+              <Color blue="0" green="0" red="cc" type="rgb"/>
             </Property>
           </Properties>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
           </AuxValues>
         </Component>
-        <Component class="javax.swing.JLabel" name="TituloOrdenesRealizadas">
+        <Component class="javax.swing.JLabel" name="TituloOrdenesRealizadasPerdida">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Segoe UI" size="14" style="1"/>
@@ -176,10 +176,10 @@
             <Property name="toolTipText" type="java.lang.String" value=""/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JLabel" name="txtOrdenesRealizadas">
+        <Component class="javax.swing.JLabel" name="txtOrdenesRealizadasPerdida">
           <Properties>
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="33" green="ff" red="33" type="rgb"/>
+              <Color blue="0" green="0" red="cc" type="rgb"/>
             </Property>
           </Properties>
           <AuxValues>
@@ -188,7 +188,7 @@
         </Component>
       </SubComponents>
     </Container>
-    <Component class="javax.swing.JLabel" name="Titulo">
+    <Component class="javax.swing.JLabel" name="TituloPerdida">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="20" green="1f" red="23" type="rgb"/>
@@ -197,9 +197,9 @@
           <Font name="Segoe UI" size="48" style="3"/>
         </Property>
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="33" green="ff" red="33" type="rgb"/>
+          <Color blue="0" green="0" red="cc" type="rgb"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="&#xa1;GANASTE!"/>
+        <Property name="text" type="java.lang.String" value="&#xa1;PERDISTE!"/>
         <Property name="opaque" type="boolean" value="true"/>
       </Properties>
       <Constraints>
