--- a/src/proyecto/pkg2023_ed/Juego_Terminado.form
+++ b/src/proyecto/pkg2023_ed/Juego_Terminado.form
@@ -55,7 +55,7 @@
                           <Component id="PresupuestoFinal" min="-2" pref="73" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
-                          <Component id="TituloOrdenes" min="-2" pref="125" max="-2" attributes="0"/>
+                          <Component id="TituloOrdenes" min="-2" pref="134" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="txtCantOrdenes" min="-2" pref="73" max="-2" attributes="0"/>
                       </Group>
@@ -104,7 +104,7 @@
               <Font name="Segoe UI" size="14" style="1"/>
             </Property>
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="0" green="ff" red="ff" type="rgb"/>
+              <Color blue="1" green="d2" red="fa" type="rgb"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Resultado: "/>
             <Property name="toolTipText" type="java.lang.String" value=""/>
@@ -126,7 +126,7 @@
               <Font name="Segoe UI" size="14" style="1"/>
             </Property>
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="0" green="ff" red="ff" type="rgb"/>
+              <Color blue="1" green="d2" red="fa" type="rgb"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Saldo Final:  "/>
             <Property name="toolTipText" type="java.lang.String" value=""/>
@@ -148,7 +148,7 @@
               <Font name="Segoe UI" size="14" style="1"/>
             </Property>
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="0" green="ff" red="ff" type="rgb"/>
+              <Color blue="1" green="d2" red="fa" type="rgb"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Total de ordenes:  "/>
             <Property name="toolTipText" type="java.lang.String" value=""/>
@@ -170,7 +170,7 @@
               <Font name="Segoe UI" size="14" style="1"/>
             </Property>
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="0" green="ff" red="ff" type="rgb"/>
+              <Color blue="1" green="d2" red="fa" type="rgb"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Ordenes realizadas:  "/>
             <Property name="toolTipText" type="java.lang.String" value=""/>
@@ -197,7 +197,7 @@
           <Font name="Segoe UI" size="48" style="3"/>
         </Property>
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="33" green="ff" red="33" type="rgb"/>
+          <Color blue="a" green="dc" red="a" type="rgb"/>
         </Property>
         <Property name="text" type="java.lang.String" value="&#xa1;GANASTE!"/>
         <Property name="opaque" type="boolean" value="true"/>
@@ -211,13 +211,13 @@
     <Component class="javax.swing.JButton" name="MenuPrincipal">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="33" green="ff" red="33" type="rgb"/>
+          <Color blue="a" green="dc" red="a" type="rgb"/>
         </Property>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Segoe UI Semibold" size="14" style="3"/>
         </Property>
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="0" green="0" red="0" type="rgb"/>
+          <Color blue="ff" green="ff" red="ff" type="rgb"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Menu Principal"/>
       </Properties>
@@ -226,14 +226,14 @@
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="390" y="160" width="-1" height="-1"/>
+          <AbsoluteConstraints x="390" y="200" width="-1" height="-1"/>
         </Constraint>
       </Constraints>
     </Component>
     <Component class="javax.swing.JButton" name="Salir">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="0" green="0" red="ff" type="rgb"/>
+          <Color blue="14" green="32" red="e6" type="rgb"/>
         </Property>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Segoe UI Semibold" size="14" style="3"/>
@@ -248,20 +248,20 @@
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="420" y="200" width="-1" height="-1"/>
+          <AbsoluteConstraints x="420" y="240" width="-1" height="-1"/>
         </Constraint>
       </Constraints>
     </Component>
     <Component class="javax.swing.JButton" name="Reintentar">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="33" green="ff" red="33" type="rgb"/>
+          <Color blue="a" green="dc" red="a" type="rgb"/>
         </Property>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Segoe UI Semibold" size="14" style="3"/>
         </Property>
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="0" green="0" red="0" type="rgb"/>
+          <Color blue="ff" green="ff" red="ff" type="rgb"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Jugar de nuevo"/>
       </Properties>
@@ -270,7 +270,7 @@
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="390" y="240" width="-1" height="-1"/>
+          <AbsoluteConstraints x="390" y="160" width="-1" height="-1"/>
         </Constraint>
       </Constraints>
     </Component>
